# venue-flow-ai

./: README.md
venueflow-postprocessor/: CMakeLists.txt  README.md  external_postprocessors.json
venueflow-postprocessor/venueflow-postprocessor-python/: CMakeLists.txt  requirements.txt  venueflow-postprocessor-python.py  venueflow-postprocessor-python.spec
venueflow-webapp/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  server.crt  server.csr  server.js  server.key
venueflow-webapp/src/app/: layout.js  page.js
venueflow-webapp/src/app/dashboard/: layout.js  page.js
venueflow-webapp/src/app/dashboard/eventsViewer/: page.js
venueflow-webapp/src/app/dashboard/mobileConnect/: page.js
venueflow-webapp/src/app/dashboard/playbackView/: page.js
venueflow-webapp/src/app/sentry/: page.js
venueflow-webapp/src/app/socketRead/: page.js
venueflow-webapp/src/app/socketWrite/: layout.js  page.js
venueflow-webapp/src/components/: cameranode.js  connecteddevice.js  eventmodel.js  eventsspinner.js  flow.js  tabs.js  toolbar.js
venueflow-webapp/src/utils/: arrayUtil.js  deviceId.js  events.js  firebase.js  nossr.js  queue.js  speech.js  timeformat.js  urls.js
venueflow-webapp/src/utils/apis/: devices.js  login.js
